--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -3,7 +3,7 @@
 }
 
 .contact > p {
-  margin: 7rem 0;
+  margin-bottom: 8rem;
 }
 
 .contact form {
